test/langtools/tools/javac/valhalla/lworld-values/RefDefault/ClassLiteralNegativeTest.out
ClassLiteralNegativeTest.java:9:35: compiler.err.type.found.req: ClassLiteralNegativeTest.val, (compiler.misc.type.req.ref)
ClassLiteralNegativeTest.java:10:11: compiler.err.type.found.req: ClassLiteralNegativeTest.val, (compiler.misc.type.req.ref)
ClassLiteralNegativeTest.java:11:11: compiler.err.type.found.req: ClassLiteralNegativeTest.val, (compiler.misc.type.req.ref)
3 errors
